--- a/docs/latex/annotated.tex
+++ b/docs/latex/annotated.tex
@@ -1,9 +1,9 @@
 \doxysection{Lista de Classes}
 Aqui estão as classes, estruturas, uniões e interfaces e suas respectivas descrições\+:\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{classCanal}{Canal}} }{\pageref{classCanal}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classCanalTexto}{Canal\+Texto}} }{\pageref{classCanalTexto}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classCanalVoz}{Canal\+Voz}} }{\pageref{classCanalVoz}}{}
-\item\contentsline{section}{\mbox{\hyperlink{classMensagem}{Mensagem}} }{\pageref{classMensagem}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classCanal}{Canal}} \\*Classe que representa um canal de voz ou de texto }{\pageref{classCanal}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classCanalTexto}{Canal\+Texto}} \\*Classe que representa um canal de texto, que guarda todas as mensagens enviadas }{\pageref{classCanalTexto}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classCanalVoz}{Canal\+Voz}} \\*Classe que representa um canal de voz, que guarda a última mensagem enviada }{\pageref{classCanalVoz}}{}
+\item\contentsline{section}{\mbox{\hyperlink{classMensagem}{Mensagem}} \\*Classe que representa uma mensagem enviada por um usuário }{\pageref{classMensagem}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classServidor}{Servidor}} \\*Classe que representa um servidor do sistema }{\pageref{classServidor}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classSistema}{Sistema}} \\*Classe do sistema do Concordo. Guarda todos os usuários e servidores }{\pageref{classSistema}}{}
 \item\contentsline{section}{\mbox{\hyperlink{classUsuario}{Usuario}} \\*Classe que representa um usuário do sistema }{\pageref{classUsuario}}{}
