--- a/docs/latex/classSistema.tex
+++ b/docs/latex/classSistema.tex
@@ -44,11 +44,23 @@ void {\bfseries list\+Servers} ()
 void \mbox{\hyperlink{classSistema_a13df10cdd549f93b79aca4b3a30046e7}{remove\+Server}} (std\+::string nome)
 \begin{DoxyCompactList}\small\item\em Remove o servidor especificado. Executado com {\ttfamily remove-\/server \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>}} \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classSistema_abdaf76b6b392965f647d73c1254e46a9}{enter\+Server}} (std\+::string args)
-\begin{DoxyCompactList}\small\item\em Entra no servidor especificado. Executado com \`{}enter-\/server $<$nome$>$ \mbox{[}codigo\mbox{]}. \end{DoxyCompactList}\item 
+\begin{DoxyCompactList}\small\item\em Entra no servidor especificado. Executado com {\ttfamily enter-\/server \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>} \mbox{[}codigo\mbox{]}}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classSistema_a7adfe2bf239371ad84e61a90daf6b249}{leave\+Server}} ()
 \begin{DoxyCompactList}\small\item\em Sai do servidor atual. Executado com {\ttfamily leave-\/server}. \end{DoxyCompactList}\item 
 void \mbox{\hyperlink{classSistema_a3621b304dfde121fc15d07c22ac57e7f}{list\+Participants}} ()
-\begin{DoxyCompactList}\small\item\em Lista os participantes do servidor atual. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Lista os participantes do servidor atual. Executado com {\ttfamily list-\/participants}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_acb0dfef9e94f9a272b7bb793af76133e}{list\+Channels}} ()
+\begin{DoxyCompactList}\small\item\em Lista os canais do servidor atual. Executado com {\ttfamily list-\/channels}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_a822164d7a54102aa37789e3c9d6fd17d}{create\+Channel}} (std\+::string args)
+\begin{DoxyCompactList}\small\item\em Cria um canal no servidor atual. Executado com {\ttfamily create-\/channel \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>} \texorpdfstring{$<$}{<}tipo\texorpdfstring{$>$}{>}}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_abe944780158601e61ed0276820ddaeee}{enter\+Channel}} (std\+::string args)
+\begin{DoxyCompactList}\small\item\em Entra em um canal do servidor atual. Executado com {\ttfamily enter-\/channel \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>}}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_ac70d6ec3709c158c28e801586a71aab0}{leave\+Channel}} ()
+\begin{DoxyCompactList}\small\item\em Sai do canal atual. Executado com {\ttfamily leave-\/channel}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_a3a2e6fee24f9793645a09a9ac8c25553}{send\+Message}} (std\+::string args)
+\begin{DoxyCompactList}\small\item\em Envia uma mensagem no canal atual. Executado com {\ttfamily send-\/message \texorpdfstring{$<$}{<}mensagem\texorpdfstring{$>$}{>}}. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{classSistema_ae4036743e108c5ac50476d2ef306ffe4}{list\+Messages}} ()
+\begin{DoxyCompactList}\small\item\em Lista as mensagens do canal atual. Executado com {\ttfamily list-\/messages}. \end{DoxyCompactList}\end{DoxyCompactItemize}
 \doxysubsection*{Atributos Privados}
 \begin{DoxyCompactItemize}
 \item 
@@ -76,6 +88,24 @@ int {\bfseries ultimo\+Id\+Usuario}
 Classe do sistema do Concordo. Guarda todos os usuários e servidores. 
 
 \doxysubsection{Documentação das funções}
+\mbox{\Hypertarget{classSistema_a822164d7a54102aa37789e3c9d6fd17d}\label{classSistema_a822164d7a54102aa37789e3c9d6fd17d}} 
+\index{Sistema@{Sistema}!createChannel@{createChannel}}
+\index{createChannel@{createChannel}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{createChannel()}{createChannel()}}
+{\footnotesize\ttfamily void Sistema\+::create\+Channel (\begin{DoxyParamCaption}\item[{std\+::string}]{args }\end{DoxyParamCaption})}
+
+
+
+Cria um canal no servidor atual. Executado com {\ttfamily create-\/channel \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>} \texorpdfstring{$<$}{<}tipo\texorpdfstring{$>$}{>}}. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em args} & Argumentos do comando, que são o nome e o tipo do canal. \\
+\hline
+\end{DoxyParams}
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso seja o dono do servidor. 
+\end{DoxyNote}
 \mbox{\Hypertarget{classSistema_aa882f32bdbd0a9bad1d18d5343a3c20c}\label{classSistema_aa882f32bdbd0a9bad1d18d5343a3c20c}} 
 \index{Sistema@{Sistema}!createServer@{createServer}}
 \index{createServer@{createServer}!Sistema@{Sistema}}
@@ -122,6 +152,24 @@ Desconecta do usuário atual. Executado com {\ttfamily disconnect}.
 \begin{DoxyNote}{Observação}
 Pode ser executado apenas se um usuário estiver logado. 
 \end{DoxyNote}
+\mbox{\Hypertarget{classSistema_abe944780158601e61ed0276820ddaeee}\label{classSistema_abe944780158601e61ed0276820ddaeee}} 
+\index{Sistema@{Sistema}!enterChannel@{enterChannel}}
+\index{enterChannel@{enterChannel}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{enterChannel()}{enterChannel()}}
+{\footnotesize\ttfamily void Sistema\+::enter\+Channel (\begin{DoxyParamCaption}\item[{std\+::string}]{args }\end{DoxyParamCaption})}
+
+
+
+Entra em um canal do servidor atual. Executado com {\ttfamily enter-\/channel \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>}}. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em args} & Argumentos do comando, que é o nome do canal. \\
+\hline
+\end{DoxyParams}
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso esteja em um servidor. 
+\end{DoxyNote}
 \mbox{\Hypertarget{classSistema_abdaf76b6b392965f647d73c1254e46a9}\label{classSistema_abdaf76b6b392965f647d73c1254e46a9}} 
 \index{Sistema@{Sistema}!enterServer@{enterServer}}
 \index{enterServer@{enterServer}!Sistema@{Sistema}}
@@ -130,7 +178,7 @@ Pode ser executado apenas se um usuário estiver logado.
 
 
 
-Entra no servidor especificado. Executado com \`{}enter-\/server $<$nome$>$ \mbox{[}codigo\mbox{]}. 
+Entra no servidor especificado. Executado com {\ttfamily enter-\/server \texorpdfstring{$<$}{<}nome\texorpdfstring{$>$}{>} \mbox{[}codigo\mbox{]}}. 
 
 \begin{DoxyNote}{Observação}
 Caso seja o dono do servidor, não é necessário código de convite. 
@@ -194,6 +242,19 @@ Busca pelo usuário com o email especificado.
 \begin{DoxyReturn}{Retorna}
 Ponteiro para o usuário, ou nullptr caso não exista. 
 \end{DoxyReturn}
+\mbox{\Hypertarget{classSistema_ac70d6ec3709c158c28e801586a71aab0}\label{classSistema_ac70d6ec3709c158c28e801586a71aab0}} 
+\index{Sistema@{Sistema}!leaveChannel@{leaveChannel}}
+\index{leaveChannel@{leaveChannel}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{leaveChannel()}{leaveChannel()}}
+{\footnotesize\ttfamily void Sistema\+::leave\+Channel (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Sai do canal atual. Executado com {\ttfamily leave-\/channel}. 
+
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso esteja em um canal. 
+\end{DoxyNote}
 \mbox{\Hypertarget{classSistema_a7adfe2bf239371ad84e61a90daf6b249}\label{classSistema_a7adfe2bf239371ad84e61a90daf6b249}} 
 \index{Sistema@{Sistema}!leaveServer@{leaveServer}}
 \index{leaveServer@{leaveServer}!Sistema@{Sistema}}
@@ -220,6 +281,32 @@ Processa o comando inserido e seus argumentos, chamando a função correspondent
 \begin{DoxyReturn}{Retorna}
 False caso {\ttfamily quit} seja executado, e true caso contrário. 
 \end{DoxyReturn}
+\mbox{\Hypertarget{classSistema_acb0dfef9e94f9a272b7bb793af76133e}\label{classSistema_acb0dfef9e94f9a272b7bb793af76133e}} 
+\index{Sistema@{Sistema}!listChannels@{listChannels}}
+\index{listChannels@{listChannels}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{listChannels()}{listChannels()}}
+{\footnotesize\ttfamily void Sistema\+::list\+Channels (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Lista os canais do servidor atual. Executado com {\ttfamily list-\/channels}. 
+
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso esteja em um servidor. 
+\end{DoxyNote}
+\mbox{\Hypertarget{classSistema_ae4036743e108c5ac50476d2ef306ffe4}\label{classSistema_ae4036743e108c5ac50476d2ef306ffe4}} 
+\index{Sistema@{Sistema}!listMessages@{listMessages}}
+\index{listMessages@{listMessages}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{listMessages()}{listMessages()}}
+{\footnotesize\ttfamily void Sistema\+::list\+Messages (\begin{DoxyParamCaption}{ }\end{DoxyParamCaption})}
+
+
+
+Lista as mensagens do canal atual. Executado com {\ttfamily list-\/messages}. 
+
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso esteja em um canal. 
+\end{DoxyNote}
 \mbox{\Hypertarget{classSistema_a3621b304dfde121fc15d07c22ac57e7f}\label{classSistema_a3621b304dfde121fc15d07c22ac57e7f}} 
 \index{Sistema@{Sistema}!listParticipants@{listParticipants}}
 \index{listParticipants@{listParticipants}!Sistema@{Sistema}}
@@ -228,7 +315,7 @@ False caso {\ttfamily quit} seja executado, e true caso contrário.
 
 
 
-Lista os participantes do servidor atual. 
+Lista os participantes do servidor atual. Executado com {\ttfamily list-\/participants}. 
 
 \begin{DoxyNote}{Observação}
 Só pode ser executado caso esteja em um servidor. 
@@ -269,6 +356,24 @@ Só pode ser executado caso seja o dono do servidor.
 {\em nome} & Nome do servidor. \\
 \hline
 \end{DoxyParams}
+\mbox{\Hypertarget{classSistema_a3a2e6fee24f9793645a09a9ac8c25553}\label{classSistema_a3a2e6fee24f9793645a09a9ac8c25553}} 
+\index{Sistema@{Sistema}!sendMessage@{sendMessage}}
+\index{sendMessage@{sendMessage}!Sistema@{Sistema}}
+\doxysubsubsection{\texorpdfstring{sendMessage()}{sendMessage()}}
+{\footnotesize\ttfamily void Sistema\+::send\+Message (\begin{DoxyParamCaption}\item[{std\+::string}]{conteudo }\end{DoxyParamCaption})}
+
+
+
+Envia uma mensagem no canal atual. Executado com {\ttfamily send-\/message \texorpdfstring{$<$}{<}mensagem\texorpdfstring{$>$}{>}}. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em conteudo} & Conteúdo da mensagem. \\
+\hline
+\end{DoxyParams}
+\begin{DoxyNote}{Observação}
+Só pode ser executado caso esteja em um canal. 
+\end{DoxyNote}
 \mbox{\Hypertarget{classSistema_a9ee65dbd3c18fc0b1f489cadd9884dd3}\label{classSistema_a9ee65dbd3c18fc0b1f489cadd9884dd3}} 
 \index{Sistema@{Sistema}!setServerDesc@{setServerDesc}}
 \index{setServerDesc@{setServerDesc}!Sistema@{Sistema}}
